添加2019年下半年真题

--- a/notes/08因特网与网络互联技术.md
+++ b/notes/08因特网与网络互联技术.md
@@ -258,6 +258,14 @@ A 发送第一次连接请求时，可能会有连接延迟，有可能延迟较
 
 ![流量控制](img/inter-tcp-3.png)
 
+> 拥塞控制
+
+为了避免网络拥塞时压垮网络，TCP 还实现了 拥塞控制 机制，主要包含这几个算法：
+- 慢启动
+- 拥塞避免
+- 快速重传
+- 快速恢复
+
 > 传输层端口
 
 三类端口
